# notivlaai

./: .gitignore  README.md
.github/: ci.yaml
.github/workflows/: ci.yaml
notivlaai-client/: .eslintrc.json  README.md  package.json  tsconfig.json
notivlaai-client/src/: App.tsx  Listener.tsx  OrderComponent.tsx  RootTypes.d.ts  SearchComponent.tsx  bell.tsx  components.ts  createNotivlaaiAPIClient.ts  createWebSocketWrapper.ts  global.css  index.html  index.test.ts  index.test.tsx  index.tsx  messages.ts  store.ts  types.ts
notivlaai-server/: .env  .env-example  .gitignore  Cargo.toml  Rocket.toml  notivlaai.sqlite3  reset-db.bash  static
notivlaai-server/migrations/2020-05-10-190703_intialize/: down.sql  up.sql
notivlaai-server/src/: db.rs  lib.rs  load.rs  main.rs  schema.rs  seed.rs  status_updater.rs  ws_updater.rs
