[package]
name = "notivlaai-server"
version = "0.1.0"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
edition = "2018"
default-run = "notivlaai-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = {version = "0.4", features=["diesel_sqlite_pool"] }
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.9.0"
tungstenite = "0.10.1"

[[bin]]
name = "seed"
path = "src/seed.rs"
