[package]
name = "notivlaai-server"
version = "0.1.0"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
edition = "2018"
default-run = "notivlaai-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.2"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
tungstenite = "0.10.1"
tokio-tungstenite = "0.10"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
 

[[bin]]
name = "seed"
path = "src/seed.rs"
